--- a/src/styles/windows.css
+++ b/src/styles/windows.css
@@ -17,7 +17,6 @@
   position: relative;
   overflow: hidden;
   background-image: linear-gradient(to bottom, var(--blue), var(--slate-blue));
-  background-attachment: fixed;
   background-repeat: no-repeat;
   box-shadow: inset 5px 5px 25px rgba(0, 0, 0, 0.25);
   transform: translate3d(0, 0, 0);
